优化部分细节

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1 class="h">TrueIB的个人网站</h1>
-  <h3 class="h"><a href="https://gitcode.com/TrueIB/trueib.github.io" target="_blank">trueib/trueib.github.io</a></h3>
+  <h3 class="h"><a href="https://gitcode.com/TrueIB/trueib.github.io" target="_blank">TrueIB/trueib.github.io</a></h3>
   <p class="h">基于HTML界面、JavaScript程序和CSS样式，依托 GitHub Pages构建</p>
   <table class="statistics" cellspacing="3">
     <thead>
