使用 iframe 优化外部网站的显示

--- a/projects/q61.html
+++ b/projects/q61.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="text/css" rel="stylesheet" href="styles.css">
+  <script type="text/javascript" src="config.js"></script>
 </head>
 
 <body>
   <main class="main-content">
     <div class="projectHTML">
       <h1>📚 小学成长纪念册 v2.3</h1>
-      <p>网站链接：<a href="https://q61.pages.dev/" target="_blank">https://q61.pages.dev/</a></p>
+      <p>网站链接：<span class="a" id="q61" href="https://q61.pages.dev/">https://q61.pages.dev/</a></p>
       <div>
         <h2>🔖 基本信息</h2>
         <ul>
@@ -60,7 +61,6 @@
       </div>
     </div>
   </main>
-  <script type="text/javascript" src="config.js"></script>
 </body>
 
 </html>
