--- a/studyNoteFiles/grade71/chinese/unit1.html
+++ b/studyNoteFiles/grade71/chinese/unit1.html
@@ -17,7 +17,7 @@
         <dt>1. 春</dt>
         <dd>
           <ul class="main-tree">
-            <li class="main-container">
+            <li class="tree-node-container">
               <div class="node">春</div>
               <ul class="tree">
                 <li class="tree-node-container">
@@ -53,7 +53,7 @@
         <dt>2. 济南的冬天</dt>
         <dd>
           <ul class="main-tree">
-            <li class="main-container">
+            <li class="tree-node-container">
               <div class="node">济南的冬天</div>
               <ul class="tree">
                 <li class="tree-node-container">
@@ -90,7 +90,7 @@
         <dt>3. 雨的四季</dt>
         <dd>
           <ul class="main-tree">
-            <li class="main-container">
+            <li class="tree-node-container">
               <div class="node">雨的四季</div>
               <ul class="tree">
                 <li class="tree-node-container">
@@ -137,7 +137,7 @@
         <dt>4. 古代诗歌四首</dt>
         <dd>
           <ul class="main-tree">
-            <li class="main-container">
+            <li class="tree-node-container">
               <div class="node">观沧海</div>
               <ul class="tree">
                 <li class="tree-node-container">
@@ -182,7 +182,7 @@
             </li>
           </ul>
           <ul class="main-tree">
-            <li class="main-container">
+            <li class="tree-node-container">
               <div class="node">次北固山下</div>
               <ul class="tree">
                 <li class="tree-node-container">
@@ -279,15 +279,76 @@
                   <ul class="tree">
                     <li class="tree-node-container">
                       <div class="node">
-                        
+                        写出了友人被贬之地的荒远。
                       </div>
+                    </li>
+                    <li class="tree-node-container">
+                      <div class="node">
+                        写出了友人被贬旅途的艰辛。
+                      </div>
+                    </li>
+                    <li class="tree-node-container">
+                      <div class="node">
+                        暗含诗人对友人的<u class="red">关心和牵挂</u>。
+                      </div>
+                    </li>
+                  </ul>
+                </li>
+                <li class="tree-node-container">
+                  <div class="node">
+                    第三句
+                  </div>
+                  <ul class="tree">
+                    <li class="tree-node-container">
+                      <div class="node">
+                        <u class="red">“愁心”</u>：对友人的<u class="red">牵挂、同情、关切、担忧</u>等。
+                      </div>
+                    </li>
+                    <li class="tree-node-container">
+                      <div class="node">
+                        <u class="red">“明月”</u>
+                      </div>
+                      <ul class="tree">
+                        <li class="tree-node-container">
+                          <div class="node">
+                            运用<u class="red">拟人和想象</u>的手法。
+                          </div>
+                        </li>
+                        <li class="tree-node-container">
+                          <div class="node">
+                            借明月<u class="red">传递自己的寄托</u>。
+                          </div>
+                        </li>
+                        <li class="tree-node-container">
+                          <div class="node">
+                            抒发了诗人对友人被贬远方的<u class="red">同情和关切</u>。
+                          </div>
+                        </li>
+                      </ul>
                     </li>
                   </ul>
                 </li>
               </ul>
             </li>
           </ul>
-          <ul class="main-tree"></ul>
+          <ul class="main-tree">
+            <li class="tree-node-container">
+              <div class="node">天净沙·秋思</div>
+              <ul class="tree">
+                <li class="tree-node-container">
+                  <div class="node">
+                    第 1 ~ 4 句：<u class="red">对比、反衬</u>（<u class="red">以乐景衬哀情</u>），抒发了游子的<u class="red">漂泊之感和思乡之情</u>。
+                  </div>
+                </li>
+                <li class="tree-node-container">
+                  <div class="node">
+                    第 5 句 → “断肠”：全诗的诗眼，<u class="red">点明主旨</u>，突出了游子<u class="red">身处凄凉之地</u>的境况，表达了诗人<u
+                      class="red">浓浓的思乡之情</u>。
+                  </div>
+                </li>
+              </ul>
+            </li>
+          </ul>
         </dd>
       </dl>
     </dd>
