优化多处细节，新增功能

--- a/help/log.html
+++ b/help/log.html
@@ -11,6 +11,7 @@
 <body>
   <h1 class="h">更新日志</h1>
   <ul>
+    <li>2025-12-13：重新实现打字效果，优化主界面，添加一些功能。</li>
     <li>2025-10-05：使用 iframe 优化外部网站的显示。</li>
     <li>2025-09-13：修复主题切换 bug，添加参数功能，使用 eval 函数缩短代码量，并优化多处细节。</li>
     <li>2025-09-06：优化主题切换及多处细节，更改字体。</li>
