--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main class="main-content">
-    <iframe class="htmlDisplayArea"></iframe>
+    <iframe class="htmlDisplayArea" title="main"></iframe>
   </main>
   <script type="text/javascript" src="js/sidebarConfig.js"></script>
 </body>
